tests/neg/i20517.check
-- [E007] Type Mismatch Error: tests/neg/i20517.scala:9:43 -------------------------------------------------------------
9 |  def dep(foo: Foo[Any]): From[foo.type] = (elem = "") // error
  |                                           ^^^^^^^^^^^
  |                                           Found:    (elem : String)
  |                                           Required: NamedTuple.From[(foo : Foo[Any])]
  |
  | longer explanation available when compiling with `-explain`
